--- a/environment.yml
+++ b/environment.yml
@@ -61,6 +61,7 @@ dependencies:
       - docker==7.1.0
       - docstring-parser==0.16
       - docx2txt==0.8
+      - duckduckgo-search==6.1.12
       - email-validator==2.2.0
       - embedchain==0.1.116
       - fastapi==0.111.1
@@ -166,6 +167,7 @@ dependencies:
       - pypdf==4.3.0
       - pypika==0.48.9
       - pyproject-hooks==1.1.0
+      - pyreqwest-impersonate==0.5.0
       - pyright==1.1.371
       - pysbd==0.3.4
       - pysocks==1.7.1
