--- a/environment.yml
+++ b/environment.yml
@@ -41,6 +41,7 @@ dependencies:
       - build==1.2.1
       - cachetools==5.4.0
       - certifi==2024.7.4
+      - chardet==5.2.0
       - charset-normalizer==3.3.2
       - chroma-hnswlib==0.7.3
       - chromadb==0.4.24
@@ -54,6 +55,7 @@ dependencies:
       - crewai-tools==0.4.8
       - dataclasses-json==0.6.7
       - decorator==5.1.1
+      - deepdiff==7.0.1
       - deprecated==1.2.14
       - deprecation==2.1.0
       - distro==1.9.0
@@ -64,10 +66,12 @@ dependencies:
       - duckduckgo-search==6.1.12
       - email-validator==2.2.0
       - embedchain==0.1.116
+      - emoji==2.12.1
       - fastapi==0.111.1
       - fastapi-cli==0.0.4
       - fastavro==1.9.5
       - filelock==3.15.4
+      - filetype==1.2.0
       - flatbuffers==24.3.25
       - frozenlist==1.4.1
       - fsspec==2024.6.1
@@ -102,7 +106,9 @@ dependencies:
       - jinja2==3.1.4
       - jiter==0.4.2
       - jmespath==1.0.1
+      - joblib==1.4.2
       - jsonpatch==1.33
+      - jsonpath-python==1.0.6
       - jsonpointer==3.0.0
       - jsonref==1.1.0
       - kubernetes==30.1.0
@@ -114,7 +120,9 @@ dependencies:
       - langchain-experimental==0.0.62
       - langchain-openai==0.1.16
       - langchain-text-splitters==0.2.2
+      - langdetect==1.0.9
       - langsmith==0.1.85
+      - lxml==5.2.2
       - mako==1.3.5
       - markdown-it-py==3.0.0
       - markupsafe==2.1.5
@@ -126,6 +134,8 @@ dependencies:
       - mpmath==1.3.0
       - multidict==6.0.5
       - mypy-extensions==1.0.0
+      - nest-asyncio==1.6.0
+      - nltk==3.8.1
       - nodeenv==1.9.1
       - numpy==1.26.4
       - oauthlib==3.2.2
@@ -142,6 +152,7 @@ dependencies:
       - opentelemetry-sdk==1.25.0
       - opentelemetry-semantic-conventions==0.46b0
       - opentelemetry-util-http==0.46b0
+      - ordered-set==4.1.0
       - orjson==3.10.6
       - outcome==1.3.0.post0
       - overrides==7.7.0
@@ -155,6 +166,7 @@ dependencies:
       - prompt-toolkit==3.0.47
       - proto-plus==1.24.0
       - protobuf==4.25.3
+      - psutil==6.0.0
       - pulsar-client==3.5.0
       - py==1.11.0
       - pyarrow==16.1.0
@@ -174,15 +186,19 @@ dependencies:
       - pytest==8.2.2
       - python-dateutil==2.9.0.post0
       - python-dotenv==1.0.1
+      - python-iso639==2024.4.27
+      - python-magic==0.4.27
       - python-multipart==0.0.9
       - python-rapidjson==1.18
       - pytube==15.0.0
       - pytz==2024.1
       - pyyaml==6.0.1
+      - rapidfuzz==3.9.4
       - ratelimiter==1.2.0.post0
       - regex==2023.12.25
       - requests==2.32.3
       - requests-oauthlib==2.0.0
+      - requests-toolbelt==1.0.0
       - retry==0.9.2
       - rich==13.7.1
       - rsa==4.9
@@ -212,6 +228,8 @@ dependencies:
       - typing-extensions==4.12.2
       - typing-inspect==0.9.0
       - tzdata==2024.1
+      - unstructured==0.14.10
+      - unstructured-client==0.24.1
       - urllib3==2.2.2
       - uvicorn==0.30.1
       - uvloop==0.19.0
